# claude-code-ml-research

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  ruff.toml
.claude/: .nfs00000000094a0c240000134f
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml
agents/: config-generator.md  geometric-specialist.md  ml-architect.md  model-optimizer.md  pytorch-expert.md  training-debugger.md  transformers-specialist.md
commands/: config.md  data.md  debug.md  experiment.md  export.md  format.md  init.md  lint.md  ml-config.md  model-export.md  profile.md  project-init.md  setup.md  train.md  validate.md
examples/image-classification/: .gitignore  README.md  pixi.toml  pyproject.toml
examples/image-classification/configs/: config.yaml
examples/image-classification/configs/experiment/: augmented.yaml  baseline.yaml
examples/image-classification/configs/logger/: tensorboard.yaml  wandb.yaml
examples/image-classification/configs/model/: resnet.yaml  simple_cnn.yaml
examples/image-classification/configs/trainer/: default.yaml  gpu.yaml
examples/image-classification/src/: __init__.py  train.py
examples/image-classification/src/models/: __init__.py  resnet.py  simple_cnn.py
hooks/: hooks.json
rules/ml/: coding-standards.md  security-practices.md  workflow-constraints.md
scripts/: __init__.py  setup_pixi.py  setup_uv.py  validate_plugin.py
skills/lightning-basics/: SKILL.md
skills/ml-cli-tools/: SKILL.md
skills/ml-cli-tools/reference/: advanced-examples.md
skills/ml-config-manager/: SKILL.md
skills/ml-config-manager/examples/: hyperparameter-sweep.md  image-classification.md
skills/ml-config-manager/templates/: data-config.yaml  experiment-config.yaml  gnn-config.yaml  model-config.yaml  sweep-config.yaml  trainer-config.yaml
skills/ml-data-pipeline/: SKILL.md
skills/ml-data-pipeline/scripts/: create_lmdb.py  preprocess_data.py  validate_data.py
skills/ml-data-pipeline/templates/: graph_datamodule.py  vision_datamodule.py
skills/ml-debug/: SKILL.md
skills/ml-debug/examples/: gnn-debugging.md  nan-loss-debugging.md
skills/ml-debug/scripts/: debug_report.py
skills/ml-experiment/: SKILL.md
skills/ml-experiment/examples/: experiment-analysis.md  wandb-integration.md
skills/ml-experiment/scripts/: compare_experiments.py  experiment_registry.py
skills/ml-experiment/templates/: experiment-templates.yaml
skills/ml-format/: SKILL.md
skills/ml-hydra-config/: SKILL.md
skills/ml-lightning-basics/: SKILL.md
skills/ml-lint/: SKILL.md
skills/ml-model-export/: SKILL.md
skills/ml-profile/: SKILL.md
skills/ml-profile/scripts/: profile_dataloader.py  profile_training.py
skills/ml-project-init/: SKILL.md
skills/ml-pytorch-geometric/: SKILL.md
skills/ml-setup/: SKILL.md
skills/ml-train/: SKILL.md  reference.md
skills/ml-train/examples/: gnn-training.md  image-classification.md  text-classification.md
skills/ml-train/templates/: basic-training.yaml  distributed-training.yaml  fsdp-large-model.yaml  multi-gpu-training.yaml
skills/ml-transformers/: SKILL.md
skills/ml-transformers/reference/: advanced-topics.md
skills/ml-validate/: SKILL.md
skills/ml-validate/scripts/: validate_project.py
skills/ml-wandb-tracking/: SKILL.md
skills/pytorch-geometric/: SKILL.md
skills/tool-marimo/: SKILL.md
skills/tool-pixi/: SKILL.md
skills/tool-pixi/reference/: advanced-topics.md
skills/tool-uv-monorepo/: SKILL.md
templates/ml-research/: copier.yml  pixi.toml.jinja
templates/ml-research/configs/trainer/: default.yaml.jinja
tests/: __init__.py  test_plugin_structure.py
