[project]
name = "claude-code-ml-research"
version = "0.1.0"
description = "Comprehensive Machine Learning research plugin for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ML Research Team"}
]
keywords = [
    "claude-code",
    "machine-learning",
    "pytorch",
    "pytorch-lightning",
    "hydra",
    "pytorch-geometric",
    "transformers",
    "ml-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]

# Development dependencies only (not runtime dependencies for projects using the plugin)
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "ty>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/nishide-dev/claude-code-ml-research"
Repository = "https://github.com/nishide-dev/claude-code-ml-research"
Issues = "https://github.com/nishide-dev/claude-code-ml-research/issues"
Documentation = "https://github.com/nishide-dev/claude-code-ml-research/blob/main/README.md"

# No build system needed - this is a Claude Code plugin, not a Python package

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=scripts",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ty configuration (ty doesn't require config file, uses sensible defaults)
# Run with: ty check [path]

[tool.ruff]
# Use separate ruff.toml for detailed configuration
# This is just for basic settings
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Minimal config here, detailed config in ruff.toml
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ty>=0.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.0",
    "typer>=0.21.1",
]
