[project]
name = "cifar10-classification"
version = "0.1.0"
description = "CIFAR-10 image classification with PyTorch Lightning and Hydra"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "pytorch-lightning>=2.1",
    "hydra-core>=1.3",
    "tensorboard>=2.15",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "C4", "T20", "LOG", "G"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--cov=src", "--cov-report=html", "--cov-report=term"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
